# openpile

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: Test.yml  action.yml  black.yml  codcov.yml  documentation.yaml  publish-to-pypi.yml  publish-to-test-pypi.yml
.github/workflows/.github/workflows/: Test.yml  black.yml
docs/: requirements_docs.txt
docs/source/: API.rst  PYmodels.rst  about.rst  axialsoilmodels.rst  background.rst  conf.py  gettingstarted.rst  index.rst  intro.rst  introsoilmodels.rst  lateralsoilmodels.rst  openpileintro.rst  soilmodels.rst  usage.rst
docs/source/API/: construct.rst  soilmodels.rst  winkler.rst
resources/Computational_speed/: Build_stiffness_matrix.ipynb  SolveEq.ipynb
resources/Stiffness matrices/: Stiffness_matrices.ipynb
samples/: CowdenClay_Byrne2020_D1.ipynb  GDSM_Burd2020_D2t.ipynb  Test01.py  Usage.ipynb  api_clay_compare.ipynb  check_kernel.ipynb  create_plots.ipynb  run_check_kernel.ipynb  run_usage.ipynb  usage2.ipynb  usage3.ipynb
src/openpile/: __init__.py  analyses.py  analyze.py  calculate.py  compute.py  construct.py  globals.py  materials.py  soilmodels.py  winkler.py
src/openpile/core/: PYsoilmodels.py  TZsoilmodels.py  _model_build.py  kernel.py  mesh.py  misc.py  pile.py  py_curves.py  soilmodels.py  soilprofile.py  txt.py  validation.py
src/openpile/general/: plots.py  utils.py
src/openpile/utils/: Hb_curves.py  Mb_curves.py  graphics.py  hooks.py  kernel.py  misc.py  mt_curves.py  multipliers.py  plots.py  py_curves.py  qz_curves.py  txt.py  tz_curves.py  validation.py
test/: test_calculate.py  test_construct.py  test_hooks.py  test_multipliers.py  test_pycurves.py  test_soilmodels.py  test_usage.py  test_utils.py  test_utils_misc.py
