[metadata]
name = openpile
author = Guillaume Melin
author_email = guillaume.melin@icloud.com
license = None
license_file = None
version = attr: openpile.__version__
description = Library for geotechnical pile calculations.
long_description = file: README.md,
url = https://github.com/TchilDill/openpile
keywords = Offshore Wind, LPILE, pile, Geotechnics, monopile, pin-piles, Geotechnical, calculations, PISA
classifiers =
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python"
    "Programming Language :: Python :: 3.7"
    "Programming Language :: Python :: 3.8"
    "Programming Language :: Python :: 3.9"
    "Programming Language :: Python :: 3.10"
[options]
zip_safe = False
include_package_data = True
package_dir = 
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pandas
    numpy
    matplotlib
    numba
    scipy
    fpdf2
    pydantic
    typing_extensions  
[options.extras_require]
doc =
    Sphinx
    sphinx-rtd-theme
testing = 
    pytest >= 6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.24

[options.packages.find]
where=src

[build_sphinx]
builder = html,latexpdf
all-files = 1
build-dir = docs/build
source-dir = docs/source
