[metadata]
name = openpile
author = Guillaume Melin
author_email = guillaume.melin@icloud.com
license = GPLv3
license_files = LICENSE.txt
description = Library for geotechnical pile calculations.
url = https://github.com/TchilDill/openpile
keywords = PILE, Geotechnics, monopile, Geotechnical, calculations, PISA, winkler
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
[options]
zip_safe = False
include_package_data = True
package_dir = 
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pandas < 2.0
    numpy
    matplotlib
    numba
    scipy
    pydantic >= 2.0
    typing_extensions  
[options.extras_require]
docs =
    Sphinx==5.3.0
    sphinx-rtd-theme==1.3.0
    sphinxcontrib-applehelp==1.0.2
    sphinxcontrib-devhelp==1.0.2
    sphinxcontrib-htmlhelp==2.0.0
    sphinxcontrib-jsmath==1.0.1
    sphinxcontrib-qthelp==1.0.3
    sphinxcontrib-serializinghtml==1.1.5 
    sphinx-copybutton==0.5.2
    autodoc-pydantic==2.0.1
    pytest
    pytest-cov
    black==22.12.0
    tox==4.4.8

[options.packages.find]
where=src

[build_sphinx]
builder = html,latexpdf
all-files = 1
build-dir = docs/build
source-dir = docs/source

[tool:pytest]
addopts == --doctest-modules